activemq-deployment.yaml
apiVersion: apps/v1 
kind: StatefulSet  
metadata:
  name: activemq
spec:
  selector:
    matchLabels:
      app: activemq
  serviceName: activemq
  replicas: 3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: activemq
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: activemq
        image: cloud-activemq:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8161
        - containerPort: 61616
        - containerPort: 5672
        - containerPort: 61613
        - containerPort: 1883
        - containerPort: 61614
