nginx-reverse.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: activemq-nginx
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: activemq-nginx
  namespace: djin-shared
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: activemq-nginx
    spec:
      containers:
      - image: nginx:1.13.6-alpine
        imagePullPolicy: Always
        name: activemq-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: activemq-nginx
          mountPath: /etc/nginx/conf.d
      # Load the configuration files for nginx
      volumes:
        - name: activemq-nginx
          configMap:
            name: activemq-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: activemq-nginx
  namespace: djin-shared
spec:
  ports:
  - port: 8161
    targetPort: 8161
    protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: activemq-0
